WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256433
[Catalyst] Occasional invalid IPC: `WebPageProxy_HandleSmartMagnificationInformationForPotentialTap`
https://bugs.webkit.org/show_bug.cgi?id=256433
Summary
[Catalyst] Occasional invalid IPC: `WebPageProxy_HandleSmartMagnificationInfo...
Wenson Hsieh
Reported
2023-05-07 13:18:55 PDT
rdar://108517664
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-05-07 13:58:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13554
EWS
Comment 2
2023-05-07 16:26:22 PDT
Committed
263782@main
(f68717fc7602): <
https://commits.webkit.org/263782@main
> Reviewed commits have been landed. Closing PR #13554 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug